gen/analytics/v3/cargo-errors.log
    Checking google-analytics3 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/analytics/v3/lib)
error[E0609]: no field `request` on type `resources::management::uploads::UploadDataRequestBuilder<'a, A>`
     --> analytics/v3/lib/src/lib.rs:17317:67
      |
17317 |                     let request_json = ::serde_json::to_vec(&self.request)?;
      |                                                                   ^^^^^^^ help: a field with a similar name exists: `reqwest`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0609`.
error: Could not compile `google-analytics3`.

To learn more, run the command again with --verbose.
